--- a/public/css/main1.css
+++ b/public/css/main1.css
@@ -122,12 +122,7 @@ body {
   font-weight: 400;
   color: #777777;
   background: #fff; }
-  @media only screen and (max-width: 600px) {
-  }
 
-/* Media Query for Desktop Devices */
-@media only screen and (min-width: 800px) {
-}
 html,
 body {
   height: 100%; }
@@ -1260,8 +1255,6 @@ h1, h2, h3, h4, h5, h6 {
       margin: 0; }
   @media (max-width: 991px) {
     .banner-area .banner-img {
-      width: 300px;
-      height: 200px;
       display: none; } }
 
 .add-bag {
@@ -1719,7 +1712,7 @@ h1, h2, h3, h4, h5, h6 {
         .exclusive-deal-area .exclusive-right .product-details .add-bag .add-btn span {
           transform: rotate(0deg); }
 
-(max-width: 767px) {
+@media (max-width: 767px) {
   .single-img {
     min-width: 50%; } }
 .single-img img {
@@ -1736,7 +1729,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .single-related-product {
   margin-bottom: 30px;
-  -webkit-transition: all 0.3s ease 0s;@media 
+  -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s; }
@@ -2116,7 +2109,7 @@ label {
       width: 200px;
       border-right: 0px;
       margin-right: -5px; }
-    .cupon-area .cupon-code button {
+    .cupon-area .coupon-code button {
       border-right: 0;
       cursor: pointer; }
       .cupon-area .cupon-code button:focus {
@@ -5668,16 +5661,13 @@ label {
 
 /* End Contact Success and error Area css
 ============================================================================================ */
-.footer-shop {
-  bottom: 0;
+.footer-area {
   position: fixed;
   width: 100%;
-}
-.footer-area {
-  
-  padding-top: 30px;
-  
-  bottom: 10;
+  bottom: 0;
+  padding-bottom: 80px;
+  padding-top: 40px;
+  height: 400px;
   background-color: #222222; }
   .footer-area h6 {
     color: #fff;
